# dimitri

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  SPEC.md  package.json
asr_mlx/: main.py  pyproject.toml
asr_transcribe/: pyproject.toml  transcribe.py
assistant/: CLAUDE.md  package-lock.json  package.json  probe.mjs
assistant/src/: index.ts  tools.ts
backend/: CLAUDE.md  README.md  pyproject.toml
backend/dimitri_chem/: __init__.py  analogs.py  cli.py  docking.py  library.py  molecule.py  properties.py  scoring.py  server.py  store.py
backend/tests/: test_analogs.py  test_library.py  test_scoring.py
docs/: MODULES.md
extensions/: chemistry.ts
modules/admet/: module.json
modules/docking/: module.json
modules/molecule-editor/: module.json
modules/project-data/: module.json
modules/protein-editor/: module.json
provision/: setup.sh
skills/: chem.md
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
web/: CLAUDE.md  debug-protein.mjs  index.html  package-lock.json  package.json  shots.mjs  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  cjs-shim.ts  main.tsx  styles.css
web/src/panels/: Assistant.tsx  MoleculeEditor.tsx  ProjectData.tsx  ProteinEditor.tsx
web/src/runtime/: engine.ts  rdkit.ts
yt_split/: README.md  pyproject.toml
yt_split/yt_split/: main.py
